infra/k8s/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: api
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: registry.digitalocean.com/code-executor/code-executor-api:<IMAGE_VERSION>
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
