infra/k8s/api/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: api
  name: api-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
